<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- General -->
    <string name="app_name" translatable="false">Bucks Bunny</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_cost">Expense Cost</string>
    <string name="payments_count">Payments Count</string>

    <!-- Expenses -->
    <string name="expense_menu_update_description">Expense update</string>
    <string name="expense_menu_delete_description">Expense delete</string>
    <string name="expenses_main_graph_income">Income</string>
    <string name="expenses_main_graph_expenses">Expenses</string>
    <string name="expenses_main_graph_balance">Balance</string>
    <string name="expenses_page_title">Expenses</string>
    <string name="expenses_page_search">Search</string>
    <string name="expenses_page_chip_one_time">One Time</string>
    <string name="expenses_page_chip_monthly">Monthly</string>
    <string name="expenses_page_chip_payments">Payments</string>
    <string name="expenses_page_total">Total: %s</string>
    <string name="expenses_page_recycler_item_menu_description">Menu</string>
    <string name="expenses_page_recycler_item_monthly">%s each month</string>
    <string name="expenses_page_recycler_item_payments" tools:ignore="PluralsCandidate">%1$s payment %2$d out of %3$d</string>
    <string name="add_one_time_button_title">One Time Expense</string>
    <string name="add_monthly_button_title">Monthly Expense</string>
    <string name="add_payments_button_title">Payments Expense</string>

    <!-- Content Descriptions -->
    <string name="add_button_description">Add expense</string>
    <string name="collapse_expenses_description">Collapse expense list</string>
    <string name="back">Back</string>
    <string name="filter_one_time_expenses">Show one time expenses</string>
    <string name="filter_monthly_expenses">Show monthly expenses</string>
    <string name="filter_payments_expenses">Show Payments expenses</string>

    <!-- Errors -->
    <string name="error_empty_value">Value is empty</string>
    <string name="error_number_illegal">Illegal number</string>
    <string name="error_must_be_positive">Value must be positive</string>

    <!-- Dialogs -->
    <string name="dialog_cancel">Cancel</string>
    <string name="update_one_time_expense_dialog_title">Update One Time Expense</string>
    <string name="update_monthly_expense_dialog_title">Update Monthly Expense</string>
    <string name="update_payments_expense_dialog_title">Update Payments Expense</string>
    <string name="add_one_time_expense_dialog_title">Add One Time Expense</string>
    <string name="add_monthly_expense_dialog_title">Add Monthly Expense</string>
    <string name="add_payments_expense_dialog_title">Add Payments Expense</string>
    <string name="add_expense_dialog_add">Add</string>
    <string name="delete_expense_dialog_title">Delete Expense</string>
    <string name="delete_expense_dialog_confirmation_text">Are you sure you want to delete the expense?</string>
    <string name="choose_income_dialog_title">Choose Monthly Income</string>
    <string name="choose_income_dialog_description">Please choose your monthly income, which will be used as a base for the expenses calculation</string>
    <string name="choose_income_dialog_hint">Monthly Income</string>
    <string name="choose_income_dialog_ok">Choose</string>

    <!-- Hints -->
    <string name="hint_income_can_be_changed_later">Monthly income can be changed later</string>

    <!-- Preferences -->
    <string name="preferences_title">Preferences</string>
    <string name="preferences_system_default">System default</string>
    <string name="preferences_appearance_title">Appearance</string>
    <string name="preferences_dark_mode_title">Dark Mode</string>
    <string name="preferences_dark_mode_always">Always</string>
    <string name="preferences_dark_mode_never">Never</string>
    <string name="preferences_device_language">Device Language</string>
    <string name="preferences_app_language">App Language</string>
    <string name="preferences_functionality_title">Functionality</string>
    <string name="preferences_monthly_income">Monthly Income</string>
    <string name="preferences_help_us_improve_title">Help Us Improve</string>
    <string name="preferences_help_us_improve_info">Personal or sensitive data is not reported</string>
    <string name="preferences_help_us_improve_anonymous_data_reports_title">Anonymous Reports</string>
    <string name="preferences_help_us_improve_anonymous_data_reports_description">Analysing crash reports and app usage data helps us provide a better user experience</string>
    <string name="preferences_open_source_licenses">Open Source Licenses</string>
    <string name="preferences_bug_report">Report A Bug</string>
    <string name="preferences_bug_report_subject">Bug Report</string>
    <string name="preferences_bug_report_preparing_report">Preparing report</string>
    <string name="preferences_bug_report_content">Describe the bug:\n</string>
    <string name="preferences_application_info">App Info</string>
    <string name="preferences_anonymous_reports_category_title">Anonymous Reports</string>
    <string name="preferences_anonymous_crash_reports_title">Anonymous Crash Reports</string>
    <string name="preferences_anonymous_crash_reports_summary">Crash reports helps analysing and fixing various crashes that might occur</string>
    <string name="preferences_anonymous_usage_data_reports_title">Anonymous Usage Data Reports</string>
    <string name="preferences_anonymous_usage_data_reports_summary">Usage data reports are used to analyse usage patterns and improves user experience</string>
    <string name="preferences_about_category_title">About This App</string>
    <string name="preferences_github_title">Source code in GitHub</string>
    <string name="preferences_apache_license_title">Apache 2.0 License</string>

    <!-- Onboarding -->
    <string name="onboarding_next">Next</string>
    <string name="onboarding_lets_get_started">Let\'s get started</string>
    <string name="onboarding_welcome">Welcome to</string>
    <string name="onboarding_expenses_slogan">Control your expenses!</string>
    <string name="onboarding_income_input_info">To keep your privacy, personal or sensitive data will never leave the app and will be stored safely</string>
    <string name="onboarding_welcome_instructions">Tap \'Next\' to configure app</string>

    <!-- App Update -->
    <string name="app_update_instructions">New version available, update to enjoy great new features</string>
    <string name="app_update_button">Update</string>
</resources>