<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.shlomikatriel.expensesmanager.ui.dialogs.DeleteExpenseDialog" />

        <variable
            name="dialog"
            type="DeleteExpenseDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/title"
            style="@style/DialogTitle"
            android:text="@string/delete_expense_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/confirmation_text"
            style="@style/DialogText"
            android:text="@string/delete_expense_dialog_confirmation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> dialog.deleteClicked()}"
            android:text="@string/delete_expense_dialog_delete"
            app:layout_constraintLeft_toRightOf="@id/cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmation_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{() -> dialog.cancelClicked()}"
            android:text="@string/dialog_cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/delete"
            app:layout_constraintTop_toBottomOf="@id/confirmation_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>